# senior_design_capstone

./: .gitignore  README.md
src/backend/: README.md  main.py  pdf_parsing_eval.ipynb  pdf_parsing_workflow.py  pyproject.toml  test_client.py  vllm_inference.py
src/backend/prompts/: bank_statement_parsing_instruction.md  receipts_parsing_instruction.md
